--- a/components/nilan/cts400.yaml
+++ b/components/nilan/cts400.yaml
@@ -458,14 +458,14 @@ switch:
     address: 51
  
   - platform: gpio
-    pin: ${user_function_1_output}
+    pin: 3
     name: "Brugervalg 1"   
     id: nilan_user_function2_switch
       
   - platform: gpio
-    pin: ${user_function_2_output}
+    pin: 4
     name: "Brugervalg 2"   
-    id: nilan_user_funtion2_switch      
+    id: nilan_user_funtion2_switch       
     
 climate:
   - platform: nilan
