--- a/components/nilan/cts400.yaml
+++ b/components/nilan/cts400.yaml
@@ -1,5 +1,5 @@
 external_components:
-  - source: github://dyrvigk/nilan@main
+  - source: github://Jopand/esphome_components@main
     refresh: 0s
     
 nilan:
